--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="./logo.png" alt="Logo Haruy Sushi">
+        <img class="logo" src="./imagem/logo png.png" alt="Logo Haruy Sushi">
         <nav class="menu">
             <ul class="menu-links">
                 <li><a href="#cardapio">CARDÁPIO</a></li>
@@ -18,40 +18,40 @@
 
     <section class="banner">
         <div class="coluna">
-            <p>O verdadeiro sabor da cozinha japonesa</p>
+            <p>A felicidade crocante que derrete na boca!</p>
             <p><a class="botao" href="#cardapio">VEJA O CARDÁPIO</a></p>
         </div>
         <div class="coluna">
-            <img src="./banner.png" alt="Prato">
+            <img src="./imagem/churros-removebg-preview.png" alt="Prato">
         </div>
     </section>
     <section class="cardapio" id="cardapio">
         <h1>Cardápio</h1>
         <div class="cardapio-categoria">
-            Sushi & Sashimi
+            Sabores
         </div>
         <div class="cardapio-item">
-            <div class="cardapio-nome" >Combinado Sushi</div>
-            <div class="cardapio-preco">R$ 99,00</div>
-            <div class="cardapio-descricao" >10 Sashimis Variados, 10 uramakis Filadélfia e 10 uramakis</div>
+            <div class="cardapio-nome" >Chocolate</div>
+            <div class="cardapio-preco">R$ 20,00</div>
+            <div class="cardapio-descricao" >Churros recheado de chocolate</div>
             </div>
         </div>
         <div class="cardapio-item">
-            <div class="cardapio-nome" >Combinado Hot</div>
-            <div class="cardapio-preco">R$ 99,00</div>
-            <div class="cardapio-descricao" >1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+            <div class="cardapio-nome" >Doce de leite</div>
+            <div class="cardapio-preco">R$ 20,00</div>
+            <div class="cardapio-descricao" >Churros recheado de doce de leite</div>
             </div>
         </div>
         <div class="cardapio-item">
-            <div class="cardapio-nome" >Combinado Sushi</div>
-            <div class="cardapio-preco">R$ 115,00</div>
-            <div class="cardapio-descricao" >10 Sashimis Variados, 10 uramakis Filadélfia e 10 Uramakis</div>
+            <div class="cardapio-nome" >Granulado</div>
+            <div class="cardapio-preco">R$ 25,00</div>
+            <div class="cardapio-descricao" >Churros recheado de doce de leite com granulado</div>
             </div>
         </div>
         <div class="cardapio-item">
-            <div class="cardapio-nome" >Combinado Hot</div>
-            <div class="cardapio-preco">R$ 120,00</div>
-            <div class="cardapio-descricao" >1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+            <div class="cardapio-nome" >Creme</div>
+            <div class="cardapio-preco">R$ 20,00</div>
+            <div class="cardapio-descricao" >Churros recheado de creme</div>
             </div>
         </div>
         <div class="cardapio-categoria">
@@ -78,7 +78,7 @@
     </section>
 
     <footer>
-        <h3>Haruy Sushi</h3>
+        <h3>Churros delícia</h3>
         <p>Rua Prof. Toledo, 500, centro - Sorocaba</p>
         <p>WhatsApp: (15) 9999-1234</p>
         <p>Aberto todos os dias das 14h às 23h</p>
@@ -87,7 +87,7 @@
     <a href="https://wa.me/5515987654321" 
     target="_blank" 
     class="link-whatzap">
-    <img src="./whatsapp.png" alt="link do whatsapp">
+    <img src="./imagem/whatsapp-logo-1.png" alt="link do whatsapp">
     </a>
 
 </body>
